from src.utilities.value_range import ValueRange
from src.utilities.json_encoder import JsonEncoder

class DuplicationReport(JsonEncoder.Interface): 
    """
    Intended to be an abstraction of code duplication reports generated by tools such as PMD.
    """

    class File(JsonEncoder.Interface):
        """
        Represents the location of a duplication within a file.
        """
        filename : str
        lines : ValueRange
        columns : ValueRange

        def __init__(self, filename : str, lines : ValueRange, columns : ValueRange): 
            self.filename = filename
            self.lines = lines
            self.columns = columns
            return

    _lines : int
    _fragment : str
    _files : list[File]
    _iteration : int

    def __init__(self, lines : int, fragment : str): 
        self._lines = lines
        self._fragment = fragment
        self._files = []
        self._iteration = 0
        return
    
    def add_file(self, file : File):
        self._files.append(file)

    def get_lines(self) -> int:
        return self._lines
    
    def get_fragment(self) -> str:
        return self._fragment
    
    def get_file_nb(self) -> int:
        return len(self._files)

    def __iter__(self): 
        self._iteration = 0
        return self
    
    def __next__(self) -> File: 
        if self._iteration >= len(self._files):
            self._iteration = 0
            raise StopIteration
        file = self._files[self._iteration]
        self._iteration += 1
        return file

    